# verifactu-simple

./: .gitignore  PLAN.md  README.md  REVISION_FRONTEND.md  TASKS.md  migrate_decimals.py  pyproject.toml  requirements.txt  verifactu.conf.example  verifactu_analisis.md
app/: __init__.py  models.py  verifactu.py
frontend/: app.js  clients.html  clients.js  companies.html  companies.js  company.html  company.js  config.html  config.js  index.html  index.js  invoice-detail.html  invoice-detail.js  invoice.html  invoice.js  invoices.html  invoices.js  process.html  process.js  query.html  query.js  style.css
tests/: test_decimals.py
